--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
                 Celebration</h1>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!-- 65% Offer Section -->
+        <section class="second-section-container">
+            <div class="second-section-content">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATERGORIES</h3>
+            </div>
+            <div class="second-section-img">
+                <img src="images/new-year.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
